welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:13: error: ';' expected but 'else' found.
    else if((a+b)==(10+a+c) {
    ^